--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "dev": "nodemon node ./src/app.js"
   },
   "dependencies": {
+    "file-type": "^12.3.0",
     "koa": "^2.8.2",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
     "log4js": "^5.2.0",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
